--- a/main.css
+++ b/main.css
@@ -1,19 +1,38 @@
 html {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui;
 }
 
 h1 {
-    text-align: center;
+    float: left;
+    padding-left: 30px;
+    color: coral;
 }
 
-nav a {
+a {
+    float: right;
     text-decoration: none;
     color: black;
+    padding-left: 50px;
 }
 
 nav {
+    padding: 30px;
+}
+
+#sqr1 {
+    height: 100px;
+    width: 250px;
     background-color: coral;
-    border-radius: 10px;
+    opacity: 50%;
+    border-radius: 20px;
     text-align: center;
 }
 
+#sqr2 {
+    height: 400px;
+    width: 250px;
+    background-color: coral;
+    opacity: 50%;
+    border-radius: 20px;
+    text-align: center;
+}
