Added Quazta Logo to Index.html

--- a/main.css
+++ b/main.css
@@ -2,10 +2,9 @@ html {
     font-family: system-ui;
 }
 
-h1 {
+#logo {
     float: left;
-    padding-left: 30px;
-    color: coral;
+    padding: 30px;
 }
 
 a {
