--- a/main.css
+++ b/main.css
@@ -2,36 +2,26 @@ html {
     font-family: system-ui;
 }
 
-#logo {
-    float: left;
+header {
     padding: 30px;
+    padding-bottom: 100px;
 }
 
-a {
+
+#logo {
+    float: left;
+}
+
+#links {
     float: right;
     text-decoration: none;
     color: black;
     padding-left: 50px;
 }
 
-nav {
-    padding: 30px;
-}
-
-#sqr1 {
-    height: 100px;
-    width: 250px;
-    background-color: coral;
-    opacity: 50%;
-    border-radius: 20px;
-    text-align: center;
-}
-
-#sqr2 {
-    height: 400px;
-    width: 250px;
-    background-color: coral;
-    opacity: 50%;
-    border-radius: 20px;
-    text-align: center;
+#image {
+    margin-left: 30px;
+    margin-right: 30px;
+    border-radius: 15px;
+    float: left;
 }
